--- a/about.html
+++ b/about.html
@@ -20,7 +20,8 @@
             <ul>
                 <li><a href="index.html" class="nav-button">Home</a></li>
                 <li><a href="about.html" class="nav-button">About</a></li>
-                <li><a href="hobbies.html" class="nav-button">Hobbies</a></li>            	    </ul>
+                <li><a href="hobbies.html" class="nav-button">Hobbies</a></li>            	   
+            </ul>
         </nav>
     </header>
 
