--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
      <style>
         p {
-            border-bottom: 10px solid black;
+            border-bottom: 7px #ba68c8;
             padding-bottom: 10px;
             margin-bottom: 10px;
         }
