--- a/hobbies.html
+++ b/hobbies.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" href="styles.css">
     <title>Olivia's Hobbies</title>
 </head>
-<body>
+	<style>
+        p {
+            border-bottom: 1px solid black;
+            padding-bottom: 10px;
+            margin-bottom: 10px;
+        }
+    </style>
+</head>	
+	<body>
     <header>
         <nav>
            <ul>
